# sonify

./: .gitignore  README.md  guide_hf_token.md  pyproject.toml
.streamlit/: config.toml
sonify/: 1_single_file_demo.py  cli.py  diarize.py  streamlit_app.py  streamlit_entry.py  transcribe.py  welcome.py
sonify/pages/: 1_transcribe_and_diarize.py  2_batch_processing.py  2_guide_hf_token.py  3_settings.py
sonify/utils/: cache.py  session.py
