[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sonify"
version = "0.1.0"
description = "Audio transcription and diarization via Whisper & pyannote"
readme = "README.md"
requires-python = ">=3.10"
authors = [ { name = "Tom Wysotzki", email = "info@datawys.de" } ]
license = { text = "MIT" }
dependencies = [
  "openai-whisper==20250625",
  "torch==2.2.0",
  "pyannote.audio==3.3.1",
  "lightning-fabric",
  "cryptography",
  "pytorch-lightning>=2.0.2,<3.0.0",
  "streamlit==1.46.1",
  "numpy <2.0"
]



[project.scripts]
sonify = "sonify.cli:main"
sonify-app = "sonify.streamlit_entry:main"

[tool.setuptools.packages.find]
exclude = ["output"]
